--- a/stylesheets/_grid-coordinates.sass
+++ b/stylesheets/_grid-coordinates.sass
@@ -4,20 +4,30 @@
 $grid-columns: 12 !default
 $grid-width: 60px !default
 $grid-gutter-width: 20px !default
-$overflow-allowed: true !default
+$overflow: true !default
+$classes-only: false !default
 
 =grid-coordinates
+  @if $classes-only
+    @if $overflow
+      .grid-pie-clearfix
+        +pie-clearfix
+    @else
+      .grid-clearfix
+        +clearfix
   .grid-container
-    +grid-container
+    +grid-container($overflow, $classes-only)
   .nested-grid-container
-    +nested-grid-container
+    +nested-grid-container($overflow, $classes-only)
   .grid-block
-    +grid-block
+    +grid-block($overflow, $classes-only)
+  .grid-full
+    +grid-full($overflow, $classes-only)
+
+  // Loops
   @for $i from 1 through $grid-columns
     .grid-#{$i}
-      +grid($i)
-  .grid-full
-    +grid-full
+      +grid($i, $overflow, $classes-only)
   @for $i from 1 through $grid-columns - 1
     .grid-prefix-#{$i}
       +grid-prefix($i)
@@ -31,38 +41,59 @@ $overflow-allowed: true !default
     .grid-pull-#{$i}
       +grid-pull($i)
 
-=overflow-allowed($boolean: $overflow-allowed)
-  @if $boolean
-    +pie-clearfix
+=overflow($overflow, $classes-only)
+  @if $overflow
+    @if $classes-only
+      @extend .grid-pie-clearfix
+    @else
+      +pie-clearfix
   @else
-    +clearfix
+    @if $classes-only
+      @extend .grid-clearfix
+    @else
+      +clearfix
 
-=grid-container
-  +overflow-allowed
+// Grid Container
+=grid-container-base
   margin: 0 auto
   width: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width
 
-=nested-grid-container
-  +overflow-allowed
+=grid-container($overflow, $classes-only)
+  +overflow($overflow, $classes-only)
+  +grid-container-base
+
+// Nested Container
+=nested-grid-container-base
   display: inline-block
   margin:
     left: -$grid-gutter-width / 2
     right: -$grid-gutter-width / 2
   width: auto
 
-=grid-block
+=nested-grid-container($overflow, $classes-only)
+  +overflow($overflow, $classes-only)
+  +nested-grid-container-base
+
+// Grid Block
+
+=grid-block($overflow, $classes-only)
+  +overflow($overflow, $classes-only)
   +float-left
-  +overflow-allowed
+  position: relative
   margin: 0 $grid-gutter-width / 2
 
-=grid($grid-columns)
-  position: relative
+// Grid
+=grid($grid-columns, $overflow, $classes-only)
   +grid-width($grid-columns)
-  +grid-block
+  @if $classes-only
+    @extend .grid-block
+  @else
+    +grid-block($overflow, $classes-only)
 
-=grid-full
-  +grid($grid-columns)
+=grid-full($overflow, $classes-only)
+  +grid($grid-columns, $overflow, $classes-only)
 
+// Grid logic
 =grid-width($grid-columns)
   @if $grid-columns == 1
     width: $grid-width
