--- a/stylesheets/_grid-coordinates.scss
+++ b/stylesheets/_grid-coordinates.scss
@@ -5,7 +5,6 @@ $grid-columns: 12 !default;
 $grid-width: 60px !default;
 $grid-gutter-width: 20px !default;
 $overflow: true !default;
-$classes-only: false !default;
 
 @mixin grid-coordinates {
   @if $overflow {
@@ -53,25 +52,19 @@ $classes-only: false !default;
     .grid-pull-#{$i} {
       @include grid-pull($i); } } }
 
-@mixin overflow($overflow, $classes-only) {
+@mixin overflow {
   @if $overflow {
-    @if $classes-only {
-      @extend .grid-pie-clearfix; }
-    @else {
-      @include pie-clearfix; } }
+    @include pie-clearfix; }
   @else {
-    @if $classes-only {
-      @extend .grid-clearfix; }
-    @else {
-      @include clearfix; } } }
+    @include clearfix; } }
 
 // Grid Container
 @mixin grid-container-base {
   margin: 0 auto;
   width: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width; }
 
-@mixin grid-container($overflow, $classes-only) {
-  @include overflow($overflow, $classes-only);
+@mixin grid-container {
+  @include overflow;
   @include grid-container-base; }
 
 // Nested Container
@@ -82,8 +75,8 @@ $classes-only: false !default;
     right: -$grid-gutter-width / 2; };
   width: auto; }
 
-@mixin nested-grid-container($overflow, $classes-only) {
-  @include overflow($overflow, $classes-only);
+@mixin nested-grid-container {
+  @include overflow;
   @include nested-grid-container-base; }
 
 // Grid Block
@@ -92,23 +85,20 @@ $classes-only: false !default;
   position: relative;
   margin: 0 $grid-gutter-width / 2; }
 
-@mixin grid-block($overflow, $classes-only) {
+@mixin grid-block {
   @include grid-block-base;
-  @include overflow($overflow, $classes-only); }
+  @include overflow; }
 
 // Grid
 @mixin grid-base($grid-columns) {
   @include grid-width($grid-columns); }
 
-@mixin grid($grid-columns, $overflow, $classes-only) {
+@mixin grid($grid-columns) {
   @include grid-base($grid-columns);
-  @if $classes-only {
-    @extend .grid-block; }
-  @else {
-    @include grid-block($overflow, $classes-only); } }
+  @include grid-block; }
 
-@mixin grid-full($overflow, $classes-only) {
-  @include grid($grid-columns, $overflow, $classes-only); }
+@mixin grid-full {
+  @include grid($grid-columns); }
 
 // Grid logic
 @mixin grid-width($grid-columns) {
