--- a/stylesheets/_grid-coordinates.sass
+++ b/stylesheets/_grid-coordinates.sass
@@ -62,7 +62,7 @@ $overflow: true !default
 // Grid Container
 =grid-container-base
   margin: 0 auto
-  width: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width
+  width: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
 
 =grid-container
   +overflow
@@ -72,8 +72,8 @@ $overflow: true !default
 =nested-grid-container-base
   display: inline-block
   margin:
-    left: -$grid-gutter-width / 2
-    right: -$grid-gutter-width / 2
+    left: -($grid-gutter-width / 2)
+    right: -($grid-gutter-width / 2)
   width: auto
 
 =nested-grid-container
@@ -84,7 +84,7 @@ $overflow: true !default
 =grid-block-base
   +float-left
   position: relative
-  margin: 0 $grid-gutter-width / 2
+  margin: 0 ($grid-gutter-width / 2)
 
 =grid-block
   +grid-block-base
@@ -109,25 +109,13 @@ $overflow: true !default
     width: (($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)) - $grid-gutter-width
 
 =grid-prefix($grid-columns)
-  @if $grid-columns == 1
-    padding-left: $grid-width + $grid-gutter-width
-  @else
-    padding-left: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
+  padding-left: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
 
 =grid-suffix($grid-columns)
-  @if $grid-columns == 1
-    padding-right: $grid-width + $grid-gutter-width
-  @else
-    padding-right: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
+  padding-right: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
 
 =grid-push($grid-columns)
-  @if $grid-columns == 1
-    left: $grid-width + $grid-gutter-width
-  @else
-    left: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
+  left: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
 
 =grid-pull($grid-columns)
-  @if $grid-columns == 1
-    left: -(($grid-width + $grid-gutter-width))
-  @else
-    left: -(($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width))
+  left: -($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
