--- a/stylesheets/_grid-coordinates.scss
+++ b/stylesheets/_grid-coordinates.scss
@@ -43,8 +43,14 @@ $overflow: true !default;
     .grid-prefix-#{$i} {
       @include grid-prefix($i); } }
   @for $i from 1 through $grid-columns - 1 {
+    .grid-prefix-margin-#{$i} {
+      @include grid-prefix($i, margin); } }
+  @for $i from 1 through $grid-columns - 1 {
     .grid-suffix-#{$i} {
       @include grid-suffix($i); } }
+  @for $i from 1 through $grid-columns - 1 {
+    .grid-suffix-margin-#{$i} {
+      @include grid-suffix($i, margin); } }
   @for $i from 1 through $grid-columns - 1 {
     .grid-push-#{$i} {
       @include grid-push($i); } }
@@ -107,11 +113,17 @@ $overflow: true !default;
   @else {
     width: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width - $grid-gutter-width; } }
 
-@mixin grid-prefix($grid-columns) {
-  padding-left: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width; }
+@mixin grid-prefix($grid-columns, $type: "padding") {
+  @if $type == "padding" {
+    padding-left: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width; }
+  @else {
+    margin-left: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width + $grid-gutter-width / 2; } }
 
-@mixin grid-suffix($grid-columns) {
-  padding-right: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width; }
+@mixin grid-suffix($grid-columns, $type: "padding") {
+  @if $type == "padding" {
+    padding-right: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width; }
+  @else {
+    margin-right: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width + $grid-gutter-width / 2; } }
 
 @mixin grid-push($grid-columns) {
   left: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width; }
