--- a/stylesheets/_grid-coordinates.scss
+++ b/stylesheets/_grid-coordinates.scss
@@ -116,7 +116,7 @@ $overflow: true !default;
 @mixin grid-prefix($grid-columns, $type: "padding") {
   @if $type == "padding" {
     padding-left: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width; }
-  @else {
+  @else if $type == "margin" {
     margin-left: $grid-columns * $grid-width + $grid-columns * $grid-gutter-width + $grid-gutter-width / 2; } }
 
 @mixin grid-suffix($grid-columns, $type: "padding") {
