Now importing the compass/css3 module and set the box model type on grid blocks to 'box-content' using the box-sizing mixing

--- a/stylesheets/_grid-coordinates.sass
+++ b/stylesheets/_grid-coordinates.sass
@@ -1,6 +1,7 @@
-@import compass/utilities
+@import "compass/utilities"
+@import "compass/css3"
 
-// Configure grid coordinates
+// Configure Grid Coordinates
 $grid-columns: 12 !default
 $grid-width: 60px !default
 $grid-gutter-width: 20px !default
@@ -88,6 +89,7 @@ $overflow: true !default
 
 // Grid Block
 =grid-block-base
+  +box-sizing(box-content)
   +float-left
   position: relative
   margin: 0 ($grid-gutter-width / 2)
