Big opps, make it 'border-box'

--- a/stylesheets/_grid-coordinates.sass
+++ b/stylesheets/_grid-coordinates.sass
@@ -89,7 +89,7 @@ $overflow: true !default
 
 // Grid Block
 =grid-block-base
-  +box-sizing(box-content)
+  +box-sizing(border-box)
   +float-left
   position: relative
   margin: 0 ($grid-gutter-width / 2)
