Dropped the .sass-cache from the repo and added to gitignore, cleaned up the test page. Dropped support for grid-prefix and grid-suffix using padding and now uses margin to support the feature instead

--- a/test/sass/screen.sass
+++ b/test/sass/screen.sass
@@ -5,14 +5,13 @@
 $grid-columns: 12
 $grid-width: 60px
 $grid-gutter-width: 20px
+// $overflow: true
 
 // @import grid-coordinates
-// Route to local gem mixin file for development use only
+
+// path to local mixin ~ for development use only
 @import ../../stylesheets/grid-coordinates
 
 +grid-coordinates
 
 +demo-style
-
-.grid-prefix-1, .grid-prefix-margin-1
-  text-align: left !important
