--- a/stylesheets/_grid-coordinates.sass
+++ b/stylesheets/_grid-coordinates.sass
@@ -45,14 +45,8 @@ $overflow: true !default
     .grid-prefix-#{$i}
       +grid-prefix($i)
   @for $i from 1 through $grid-columns - 1
-    .grid-prefix-margin-#{$i}
-      +grid-prefix($i,margin)
-  @for $i from 1 through $grid-columns - 1
     .grid-suffix-#{$i}
       +grid-suffix($i)
-  @for $i from 1 through $grid-columns - 1
-    .grid-suffix-margin-#{$i}
-      +grid-suffix($i,margin)
   @for $i from 1 through $grid-columns - 1
     .grid-push-#{$i}
       +grid-push($i)
@@ -116,17 +110,11 @@ $overflow: true !default
   @else
     width: (($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)) - $grid-gutter-width
 
-=grid-prefix($grid-columns, $type: "padding")
-  @if $type == "padding"
-    padding-left: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
-  @else if $type == "margin"
-    margin-left: (($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)) + ($grid-gutter-width / 2)
+=grid-prefix($grid-columns)
+  margin-left: (($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)) + ($grid-gutter-width / 2)
 
-=grid-suffix($grid-columns, $type: "padding")
-  @if $type == "padding"
-    padding-right: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
-  @else
-    margin-right: (($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)) + ($grid-gutter-width / 2)
+=grid-suffix($grid-columns)
+  margin-right: (($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)) + ($grid-gutter-width / 2)
 
 =grid-push($grid-columns)
   left: ($grid-columns * $grid-width) + ($grid-columns * $grid-gutter-width)
