Tested release 1.1.5. Updated readme, gemspec and the test project.

--- a/test/views/index.haml
+++ b/test/views/index.haml
@@ -8,9 +8,9 @@
     %script{:src => "/javascripts/site.js"}
   %body
     #header.grid-container
-      #branding.grid-4
+      #branding.grid-3.grid-suffix-1
         %p Branding
-      #navigation.grid-8
+      #navigation.grid-7.grid-push-1
         %p Navigation
     #page.grid-container
       #page-body.grid-8
