--- a/test/public/stylesheets/screen.css
+++ b/test/public/stylesheets/screen.css
@@ -3,12 +3,37 @@
   font-family: "Helvetica-Neue", Helvetica, Arial, sans-serif;
 }
 
-.grid-pie-clearfix, .grid-container, .nested-grid-container, .grid-block, .grid-full, .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, .grid-8, .grid-9, .grid-10, .grid-11, .grid-12 {
-  *zoom: 1;
+.a-clearfix, .grid-clearfix, .grid-pie-clearfix, .grid-container, .nested-grid-container, .grid-block, .grid-full, .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, .grid-8, .grid-9, .grid-10, .grid-11, .grid-12 {
+  zoom: 1;
 }
-.grid-pie-clearfix:after, .grid-container:after, .nested-grid-container:after, .grid-block:after, .grid-full:after, .grid-1:after, .grid-2:after, .grid-3:after, .grid-4:after, .grid-5:after, .grid-6:after, .grid-7:after, .grid-8:after, .grid-9:after, .grid-10:after, .grid-11:after, .grid-12:after {
-  content: "";
-  display: table;
+.a-clearfix:before, .grid-clearfix:before, .grid-pie-clearfix:before, .grid-container:before, .nested-grid-container:before, .grid-block:before, .grid-full:before, .grid-1:before, .grid-2:before, .grid-3:before, .grid-4:before, .grid-5:before, .grid-6:before, .grid-7:before, .grid-8:before, .grid-9:before, .grid-10:before, .grid-11:before, .grid-12:before, .a-clearfix:after, .grid-clearfix:after, .grid-pie-clearfix:after, .grid-container:after, .nested-grid-container:after, .grid-block:after, .grid-full:after, .grid-1:after, .grid-2:after, .grid-3:after, .grid-4:after, .grid-5:after, .grid-6:after, .grid-7:after, .grid-8:after, .grid-9:after, .grid-10:after, .grid-11:after, .grid-12:after {
+  content: ".";
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  font-size: 0;
+  line-height: 0;
+  width: 0;
+  height: 0;
+}
+.a-clearfix:after, .grid-clearfix:after, .grid-pie-clearfix:after, .grid-container:after, .nested-grid-container:after, .grid-block:after, .grid-full:after, .grid-1:after, .grid-2:after, .grid-3:after, .grid-4:after, .grid-5:after, .grid-6:after, .grid-7:after, .grid-8:after, .grid-9:after, .grid-10:after, .grid-11:after, .grid-12:after {
+  clear: both;
+}
+
+.a-clearfix, .grid-clearfix, .grid-pie-clearfix, .grid-container, .nested-grid-container, .grid-block, .grid-full, .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6, .grid-7, .grid-8, .grid-9, .grid-10, .grid-11, .grid-12 {
+  zoom: 1;
+}
+.a-clearfix:before, .grid-clearfix:before, .grid-pie-clearfix:before, .grid-container:before, .nested-grid-container:before, .grid-block:before, .grid-full:before, .grid-1:before, .grid-2:before, .grid-3:before, .grid-4:before, .grid-5:before, .grid-6:before, .grid-7:before, .grid-8:before, .grid-9:before, .grid-10:before, .grid-11:before, .grid-12:before, .a-clearfix:after, .grid-clearfix:after, .grid-pie-clearfix:after, .grid-container:after, .nested-grid-container:after, .grid-block:after, .grid-full:after, .grid-1:after, .grid-2:after, .grid-3:after, .grid-4:after, .grid-5:after, .grid-6:after, .grid-7:after, .grid-8:after, .grid-9:after, .grid-10:after, .grid-11:after, .grid-12:after {
+  content: ".";
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  font-size: 0;
+  line-height: 0;
+  width: 0;
+  height: 0;
+}
+.a-clearfix:after, .grid-clearfix:after, .grid-pie-clearfix:after, .grid-container:after, .nested-grid-container:after, .grid-block:after, .grid-full:after, .grid-1:after, .grid-2:after, .grid-3:after, .grid-4:after, .grid-5:after, .grid-6:after, .grid-7:after, .grid-8:after, .grid-9:after, .grid-10:after, .grid-11:after, .grid-12:after {
   clear: both;
 }
 
@@ -295,7 +320,7 @@
   color: white;
   cursor: pointer;
   display: block;
-  background: url('../images/toggle-grid.png?1313303422') no-repeat right 50%;
+  background: url('../images/toggle-grid.png?1317268129') no-repeat right 50%;
   font-size: 12px;
   line-height: 16px;
   padding-right: 22px;
